# parse-identify

./: CMakeLists.txt  README.md  dsfdsf.cpp  main.cpp  quicktest.cmd
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  main.yml
data/: notbin.txt
src/: main.cpp  parser.cpp  parser.h  pprinter.cpp  pprinter.h
